# fantasy-analysis

./: .gitignore  Analysis.ipynb  CLAUDE.md  README.md  Untitled.ipynb  alembic.ini  auction_predictor.ipynb  conftest.py  dataScraper.ipynb  db_test  gameScraper.ipynb  hrefScraper.ipynb  keeptradecut.xlsx  ktc_analysis.ipynb  league_analysis.ipynb  lifetime_value.ipynb  market_testing.ipynb  models.py  player_hrefs.pkl  pytest.ini  requirements.txt  team_value_overtime.csv
data_engineering/: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
data_engineering/cloud_functions/ktc_ingestion/: archived_devy.py  failed_players.txt  full_dynasty.py  historic_dynasty.py  incremental__dynasty.py  requirements.txt  utils.py
data_engineering/cloud_functions/nfl_ingestion/: main.py
data_engineering/cloud_functions/player_ingestion/: main.py  procfile  requirements.txt
data_engineering/fantasycalc_ingestion/: .dockerignore  CLAUDE.md  Dockerfile  requirements.txt
data_engineering/fantasypros_ingestion/: CLAUDE.md  Dockerfile  projections_scraper.py  requirements.txt
data_engineering/ktc_ingestion/: CLAUDE.md  Dockerfile  archived_dynasty.py  failed_players.txt  full_devy.py  full_dynasty.py  full_redraft.py  incremental__dynasty.py  incremental_devy.py  incremental_dynasty.py  incremental_redraft.py  league_overview_crawler.py  requirements.txt  utils.py
data_engineering/ktc_ingestion/devy/: archived_devy.py  full_devy.py  incremental_devy.py
data_engineering/ktc_ingestion/dynasty/: full_dynasty.py  incremental_dynasty.py  local_archive_to_cloud.py
data_engineering/nfl_ingestion/: daily_ingestion.py  full_ingestion.py  full_pbp_ingestion.py  incremental_load.py  procfile  weekly_ingestion.py
data_engineering/nflverse_ingestion/: CLAUDE.md  daily_ingestion.py  requirements.txt
data_engineering/silver_fantasy/: CLAUDE.md  Dockerfile  dim_franchise_meta.py  dim_league_events.py  dim_league_scoring_scd2.py  dim_league_settings_scd2.py  dim_leagues.py  dim_leagues_meta.py  dim_player_master.py  dim_teams.py  dim_users.py  fact_asset_values.py  fact_pick_values.py  fact_roster_membership.py  requirements.txt  utils.py
data_engineering/silver_player/: main.py
data_engineering/sleeper_ingestion/: .gitignore  CLAUDE.md  Dockerfile  _utils.py  league_crawler.py  league_history_crawler.py  pyproject.toml  requirements.txt
data_engineering/tests/: conftest.py
data_engineering/tests/ktc/: test_utils.py
machine_learning/: README.md  pyproject.toml
machine_learning/scripts/: build_training_matrix.py  evaluate_phase1.py
machine_learning/src/: baselines.py  evaluation.py  features.py  gcs_io.py  model.py
machine_learning/tests/: test_features.py  test_phase1.py
(+178 files in other folders)
